<!DOCTYPE resources [<!ENTITY rouble "₽">]>
<resources>
    <!-- Global values -->
    <string name="app_name">Pawnshop</string>
    <string name="rouble">&rouble;</string>

    <!-- Checkout -->
    <string name="CheckoutHeader">Оформление заказа</string>
    <string name="Name">Имя</string>
    <string name="Surname">Фамилия</string>
    <string name="MiddleName">Отчество</string>
    <string name="Phone">Телефон</string>
    <string name="PayChose">Способ оплаты</string>
    <string name="Cash">Наличными</string>
    <string name="Card">Картой при получении</string>
    <string name="Pay">Оплатить</string>
    <string name="PhoneHint">Пример, 89999999999 или +79999999999</string>

    <!-- Catalog -->
    <string name="catalogHeader">Католог</string>
    <!-- Catalog Items -->
    <string name="categoryName">Категория продукта</string>
    <string name="productImg">Product Image</string>

    <!--Cart-->
    <!-- Header of Cart -->
    <string name="total_price">Итог</string>
    <string name="discount_price">Скидка</string>
    <string name="price_header">Цена</string>
    <string name="title_header">Наименование</string>
    <!-- Cart Items -->
    <string name="product_title">Название</string>
    <string name="discount_present">Скидка</string>
    <string name="price_with_discount">Итог</string>
    <string name="btn_buy_cart">Оформить заказ</string>
    <string name="deleteProduct">DeleteProduct</string>

    <!-- Detailed -->
    <string name="detailed_photo_title">detailed_photo</string>
    <string name="productNaming">Название продукта</string>
    <string name="productDescription">Описание продукта</string>
    <string name="addToCart">Добавить в корзину</string>
    <string name="delProd">Удалить товар</string>
    <string name="price">Цена</string>
    <!-- Detailed Items -->
    <string name="param">Параметр продукта</string>

    <!-- Bottom Navigation Menu -->
    <string name="text_label_catalog">Каталог</string>
    <string name="text_label_cart">Корзина</string>

    <!-- Add Product -->
    <string name="AddImageText">Добавьте изображение</string>
    <string name="ImageViewDescription">Clickable image to add photo to product</string>
    <string name="AddNameText">Добавьте наименование товара</string>
    <string name="AddNameHint">Лопата</string>
    <string name="AddPriceText">Добавьте цену</string>
    <string name="AddPriceHint">1000</string>
    <string name="AddProductSend">Отправить</string>

    <!-- Sign Up and Log In -->
    <string name="SignUpHeader">Регистрация</string>
    <string name="SignUpButton">Зарегистрироваться</string>
    <string name="EmailExample">example@mail.com</string>
    <string name="Password">Пароль</string>
    <string name="LogInHeader">Вход</string>
    <string name="SignUpBtn">Регистрация</string>
    <string name="LogInBtn">Войти</string>
    <string name="bottom_to_log_out">Bottom to log out</string>

</resources>
