<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvHeaderProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/title_header"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/tvHeaderPrice"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHeaderPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/price_header"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/tvHeaderDiscount"
        app:layout_constraintStart_toEndOf="@+id/tvHeaderProductName"
        app:layout_constraintTop_toTopOf="@id/tvHeaderProductName" />

    <TextView
        android:id="@+id/tvHeaderDiscount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/discount_price"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/tvHeaderDiscountPrice"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvHeaderPrice"
        app:layout_constraintTop_toTopOf="@id/tvHeaderPrice" />

    <TextView
        android:id="@+id/tvHeaderDiscountPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/total_price"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvHeaderDiscount"
        app:layout_constraintTop_toTopOf="@id/tvHeaderDiscount" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeaderProductName">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cartProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            tools:layout_editor_absoluteX="10dp"
            android:paddingBottom="225dp" />
    </ScrollView>

    <Button
        android:id="@+id/btnApply"
        style="@style/bigPrimaryBackground"
        android:layout_margin="10dp"
        android:text="@string/btn_buy_cart"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorPrimary"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>